# POC_chat_interface

./: .gitignore  AUTOCOMPLETE_EXAMPLES.md  DEMO_SCRIPT.md  FEATURE_OPTIONS.md  FEATURE_SUGGESTIONS.md  PROJECT_HANDOVER.md  README.md  RENDER_DEPLOYMENT.md  build_files.sh  docker-compose.yml  index.html  questions_for_testing.md  salesforce-callback.html  test_queries_for_rag.md  vercel.json
ai-data-platform-package/: DEPLOYMENT.md  README.md  pyproject.toml
ai-data-platform-package/examples/: interactive_test.py  test_package.py
ai-data-platform-package/src/ai_data_platform/: apps.py  conf.py
ai-data-platform-package/src/ai_data_platform/api/: serializers.py  urls.py  views.py
ai-data-platform-package/src/ai_data_platform/core/: base.py  encryption.py
ai-data-platform-package/src/ai_data_platform/management/commands/: create_demo_data.py  init_platform.py
ai-data-platform-package/src/ai_data_platform/models/: __init__.py  platform.py  query.py
ai-data-platform-package/src/ai_data_platform/services/: __init__.py  ai_service.py  stripe_service.py  zoho_service.py
backend/: .dockerignore  .env.example  Dockerfile  REQUIREMENTS_README.md  build_files.sh  diagnose_zendesk.py  diagnose_zendesk_v2.py  diagnose_zendesk_v3.py  diagnose_zendesk_v4.py  requirements-vercel.txt  requirements.txt  seed_platform_knowledge.py  test_zendesk.py
backend/audit/: models.py
backend/catalog/: __init__.py  models.py  services.py
backend/config/: settings.py  urls.py  (+1 more)
css/: animations.css  components.css  pages.css  variables.css
js/: api.js  app.js  state.js  utils.js
(+76 files in other folders)
